@@ -1,20 +1,19 @@
 package top.skyeyefast.mchjong.world;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
+import com.electronwill.nightconfig.core.Config;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.util.Map;
+import java.util.Set;
 import java.util.WeakHashMap;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.world.level.storage.LevelResource;
+import top.skyeyefast.mchjong.config.TomlFiles;
 
 /** One policy per world save, shared by every table and dimension. Server thread only. */
 public final class WorldSettings {
     public record Policy(boolean invitationTeleport) {}
-    private static final Gson JSON = new GsonBuilder().setPrettyPrinting().create();
     private static final Map<MinecraftServer, WorldSettings> WORLDS = new WeakHashMap<>();
     private final Path path;
     private Policy policy;
@@ -34,23 +33,17 @@ public final class WorldSettings {
 
     public static WorldSettings of(MinecraftServer server) {
         return WORLDS.computeIfAbsent(server, world -> new WorldSettings(
-            world.getWorldPath(LevelResource.ROOT).resolve("config/mchjong-world.json")));
+            world.getWorldPath(LevelResource.ROOT).resolve("config/mchjong-world.toml")));
     }
 
     public Policy policy() { return policy; }
 
     public void reload() throws IOException {
-        try {
-            var object = com.google.gson.JsonParser.parseString(Files.readString(path)).getAsJsonObject();
-            if (!object.keySet().equals(java.util.Set.of("invitationTeleport")))
-                throw new IllegalArgumentException("Expected invitationTeleport");
-            for (var value : object.asMap().values())
-                if (!value.isJsonPrimitive() || !value.getAsJsonPrimitive().isBoolean())
-                    throw new IllegalArgumentException("World settings must be booleans");
-            policy = JSON.fromJson(object, Policy.class);
-        } catch (RuntimeException failure) {
-            throw new IOException("Invalid mahjong world policy: " + path, failure);
-        }
+        var config = TomlFiles.read(path);
+        if (!config.valueMap().keySet().equals(Set.of("invitationTeleport"))
+            || !(config.get("invitationTeleport") instanceof Boolean enabled))
+            throw new IOException("Invalid mahjong world policy: " + path);
+        policy = new Policy(enabled);
     }
 
     public void set(String name, boolean enabled) throws IOException {
@@ -63,11 +56,8 @@ public final class WorldSettings {
     }
 
     private void write(Policy value) throws IOException {
-        Files.createDirectories(path.getParent());
-        Path temporary = Files.createTempFile(path.getParent(), "mchjong-world-", ".tmp");
-        try {
-            Files.writeString(temporary, JSON.toJson(value) + "\n");
-            Files.move(temporary, path, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
-        } finally { Files.deleteIfExists(temporary); }
+        Config config = Config.inMemory();
+        config.set("invitationTeleport", value.invitationTeleport());
+        TomlFiles.write(path, config);
     }
 }
